[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[project]
name = "ethnicolr2"
version = "0.1.4"
description = "Predict Race/Ethnicity Based on Sequence of Characters in the Name"
readme = "README.md"
authors = [
  { name = "Rajshekar", email = "rajshekar.ch@gmail.com" },
  { name = "Suriyan", email = "suriyant@gmail.com" },
  { name = "Gaurav Sood", email = "gsood07@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
keywords = ["race", "ethnicity", "names"]
requires-python = ">=3.11"
dependencies = [
    "pandas>=1.3.0",
    "torch==2.8.0",
    "numpy>=1.20.0,<2.0.0",
    "joblib==1.3.1",
    "tqdm==4.66.3",
    "scikit-learn==1.5.1",   # Use exact version that trained the models
]

[project.urls]
"Homepage" = "https://github.com/appeler/ethnicolr2"
"Repository" = "https://github.com/appeler/ethnicolr2"
"Bug Tracker" = "https://github.com/appeler/ethnicolr2/issues"

[dependency-groups]
dev = ["check-manifest", "ruff>=0.7.0"]
test = ["coverage", "pytest"]
docs = ["sphinx", "sphinx_rtd_theme"]
all = ["check-manifest", "ruff>=0.7.0", "coverage", "pytest", "sphinx", "sphinx_rtd_theme"]

[project.scripts]
census_ln = "ethnicolr2.census_ln:main"
pred_fl_full_name = "ethnicolr2.pred_fl_full_name:main"
pred_fl_last_name = "ethnicolr2.pred_fl_last_name:main"
pred_census_last_name = "ethnicolr2.pred_census_last_name:main"
ethnicolr2_download_models = "ethnicolr2._setup_hooks:download_cli"

# Modern setuptools hooks (replaces setup.py custom commands)
[project.entry-points."setuptools.finalize_distribution_options"]
post-setup = "ethnicolr2._setup_hooks:register_commands"

[tool.setuptools]
packages = ["ethnicolr2"]
include-package-data = true

[tool.setuptools.package-data]
ethnicolr2 = [
    "data/census/census_2000.csv",
    "data/census/census_2010.csv",
    "data/census/readme.md",
    "data/census/*.pdf",
    "data/census/*.R",
    "models/*.joblib",
    "models/*.pt",
    "models/census/lstm/*.csv",
    "data/input*.csv",
    "examples/*.ipynb",
]

# Testing configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--verbose"

# Code quality and formatting tools

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "examples"
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]

[tool.hatch.build.targets.wheel]
packages = ["ethnicolr2"]
